adguard/Service-adguard-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dashboard
  namespace: adguard
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: adguard
