adguard/Service-adguard-dns.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/sharing-cross-namespace: '*'
    lbipam.cilium.io/sharing-key: default-ippool
  labels:
    cilium/ip-pool: external
  name: adguard-dns
  namespace: adguard
spec:
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dhcp
      port: 67
      protocol: UDP
  selector:
    app.kubernetes.io/name: adguard
  type: LoadBalancer
