adguard/Ingress-adguard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: adguard
  namespace: adguard
spec:
  ingressClassName: haproxy
  rules:
    - host: adguard.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: adguard-dashboard
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - adguard.anderwerse.de
      secretName: adguard-tls
