adguard/CiliumNetworkPolicy-adguard.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: adguard
  namespace: adguard
spec:
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: adguard
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/role: entrypoint
            io.kubernetes.pod.namespace: loadbalancer
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
            - port: "67"
              protocol: UDP
